[NWPS-1686] - Fixed tabs double border

--- a/app/assets/hee/blocks/content/main/hee-tabs/_tabs.scss
+++ b/app/assets/hee/blocks/content/main/hee-tabs/_tabs.scss
@@ -91,6 +91,10 @@
 
             &:first-child {
               border-top: 1px solid $color_nhsuk-grey-4;
+
+              @include mq($from: desktop) {
+                border: none;
+              }
             }
         }
     }
